Lesson 4: add AppealForm (Web & API); add AppealController (Web & API); add Ide-helper; upd routes, open API docs
