# _ide_helper_models.php
@@ -1,0 +1,132 @@
+<?php
+
+// @formatter:off
+/**
+ * A helper file for your Eloquent Models
+ * Copy the phpDocs from this file to the correct Model,
+ * And remove them from this file, to prevent double declarations.
+ *
+ * @author Barry vd. Heuvel <barryvdh@gmail.com>
+ */
+
+
+namespace App\Models{
+/**
+ * App\Models\Appeal
+ *
+ * @property int $id
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property string $name
+ * @property string|null $phone
+ * @property string|null $email
+ * @property string $message
+ * @property int|null $user_id
+ * @property-read \App\Models\User|null $user
+ * @method static \Database\Factories\AppealFactory factory(...$parameters)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereEmail($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereMessage($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal wherePhone($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUserId($value)
+ * @mixin \Eloquent
+ */
+	class IdeHelperAppeal {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\News
+ *
+ * @property int $id
+ * @property \Illuminate\Support\Carbon|null $published_at
+ * @property string $title
+ * @property string $slug
+ * @property string $text
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @method static \Database\Factories\NewsFactory factory(...$parameters)
+ * @method static Builder|News findSimilarSlugs(string $attribute, array $config, string $slug)
+ * @method static Builder|News newModelQuery()
+ * @method static Builder|News newQuery()
+ * @method static Builder|News published()
+ * @method static Builder|News query()
+ * @method static Builder|News whereCreatedAt($value)
+ * @method static Builder|News whereId($value)
+ * @method static Builder|News wherePublishedAt($value)
+ * @method static Builder|News whereSlug($value)
+ * @method static Builder|News whereText($value)
+ * @method static Builder|News whereTitle($value)
+ * @method static Builder|News whereUpdatedAt($value)
+ * @method static Builder|News withUniqueSlugConstraints(\Illuminate\Database\Eloquent\Model $model, string $attribute, array $config, string $slug)
+ * @mixin \Eloquent
+ */
+	class IdeHelperNews {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\Page
+ *
+ * @property int $id
+ * @property string $title
+ * @property string $slug
+ * @property string $text
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @method static \Database\Factories\PageFactory factory(...$parameters)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page findSimilarSlugs(string $attribute, array $config, string $slug)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Page newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Page query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereSlug($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereText($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereTitle($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Page withUniqueSlugConstraints(\Illuminate\Database\Eloquent\Model $model, string $attribute, array $config, string $slug)
+ * @mixin \Eloquent
+ */
+	class IdeHelperPage {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\User
+ *
+ * @property int $id
+ * @property string $name
+ * @property string $email
+ * @property \Illuminate\Support\Carbon|null $email_verified_at
+ * @property string $password
+ * @property string|null $remember_token
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \Illuminate\Notifications\DatabaseNotificationCollection|\Illuminate\Notifications\DatabaseNotification[] $notifications
+ * @property-read int|null $notifications_count
+ * @property-read \Illuminate\Database\Eloquent\Collection|\Laravel\Sanctum\PersonalAccessToken[] $tokens
+ * @property-read int|null $tokens_count
+ * @method static \Database\Factories\UserFactory factory(...$parameters)
+ * @method static \Illuminate\Database\Eloquent\Builder|User newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|User newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|User query()
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereEmail($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereEmailVerifiedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User wherePassword($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereRememberToken($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|User whereUpdatedAt($value)
+ * @mixin \Eloquent
+ */
+	class IdeHelperUser {}
+}
+
