# app/OpenApi/Schemas/WrongAppealSchema.php
@@ -11,19 +11,21 @@ use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
 use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
 
-class PaginatorLinksSchema extends SchemaFactory implements Reusable
+class WrongAppealSchema extends SchemaFactory implements Reusable
 {
     /**
      * @return SchemaContract
      */
     public function build(): SchemaContract
     {
-        return Schema::object('PaginatorLinks')
+        return Schema::object('WrongAppeal')
             ->properties(
-                Schema::string('first'),
-                Schema::string('last'),
-                Schema::string('prev')->nullable(),
-                Schema::string('next')->nullable(),
+                Schema::object('errors')->properties(
+                    Schema::array('name')->nullable()->items(Schema::string('description')),
+                    Schema::array('phone')->nullable()->items(Schema::string('description')),
+                    Schema::array('email')->nullable()->items(Schema::string('description')),
+                    Schema::array('message')->nullable()->items(Schema::string('description')),
+                )
             );
     }
 }
